--- a/index.html
+++ b/index.html
@@ -91,12 +91,31 @@
             color: black;
         }
 
-        a:hover, #generate-recipe-btn:hover  {
+        #generate-recipe-btn:hover  {
             cursor: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/171/470/original/heart-outline.png?1753980833'), auto;
+            color: #000000;
+        }
+
+
+        a:hover {
+            cursor: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/171/470/original/heart-outline.png?1753980833'), auto;
+            color: #F75506;
         }
 
         strong {
             font-size: 28px;
+        }
+
+        .generate-recipe-btn {
+            color: #000000;
+            border: 2px solid #fbf7af;
+            border-radius: 12px;
+        }
+
+        .generate-recipe-btn:hover {
+            background-color: #EBE8B8;
+            border-color: #6F170C;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
         }
 
         #recipe-generated {
@@ -116,9 +135,9 @@
 
 
         footer {
-            background-color: #F7F4E0;
+            background-color: #FFDE59;
             max-width: 100%;
-            padding: 40px 0;
+            padding: 0;
             margin: 0;
         }
 
@@ -146,6 +165,7 @@
         }
 
         .footnote {
+            font-size: 15px;
             padding-left: 30px;
             padding-right: 30px;
         }
@@ -164,8 +184,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Hello, Seafood Lovers!</a>
+                <a class="nav-link active" aria-current="page" href="#">HSL 💛</a>
                 <a class="nav-link" href="https://docs.google.com/document/d/1UvFN4sHFu4G8Akn1XqsgIt-adIxolUPGr_7hPhejKz4/edit?usp=drive_link">Other Recipes</a>
+                <a class="nav-link" href="https://en.wikipedia.org/wiki/Ceviche">Read more 💛 </a>
                 <a class="nav-link" href="https://www.instagram.com/yourgurljd/">Contact</a>
             </div>
             </div>
@@ -176,7 +197,7 @@
         <h1 class="text-center mb-4">Hello, Seafood Lovers!</h1>
         <div class="introduction">
         <span>
-            <p class="description">Zesty, chill, tropical and fresh summer recipe 🐟🍋 Today's tasty summer recipe is...</p>
+            <p class="description">Zesty, chill, tropical and fresh summer 🐟🍋 Today's tasty summer recipe is...</p>
         </span>
         <div>
             <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/171/461/original/seafood_ceviche_plate_from_bird-eye-view_angle..jpg?1753971271" alt="Seafood Ceviche" title="Seafood Ceviche" class="img-fluid" id="recipe">
@@ -185,7 +206,7 @@
             <span>
                 <p class="recipe-caption">Dive into summer with this no-cook seafood ceviche!</p>
             </span>
-            <button type="button" class="btn btn-lg" id="generate-recipe-btn">
+            <button type="button" class="btn btn-lg generate-recipe-btn" id="generate-recipe-btn">
                 <strong>Seafood Ceviche 🦐🐙🐟</strong>
             </button>
         </div>
@@ -215,7 +236,7 @@
   });
 </script>
     </div>
-    <footer class="w-100">
+    <footer class="mt-5">
         <div class="row g-0 text-center">
             <div class="col-sm-4" id="footer-banner">
                 <span class="footer-social-media">
@@ -223,7 +244,7 @@
                 </span>
             </div>
             <div class="col-sm-4">
-                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/171/471/original/Hello_%283%29.png?1753981221" alt="">
+                <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/171/468/original/Hello_%281%29.png?1753979212" alt="">
             </div>
             <div class="col-sm-4">
                 <span>
